--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html, body{
     font-family: 'Roboto', sans-serif;
     line-height: 26px;
     font-weight: normal;
+    color: #636363;
 }
 .container{
     max-width: 1199px;
@@ -31,6 +32,20 @@ html, body{
 .btn--1:hover{
     background-position: right center;
 }
+.title p{
+    margin-bottom: 20px;
+    color: #f55f8d;
+    font-size: 22px;
+    font-weight: 600;
+}
+.title h2{
+    font-size: 70px;
+    font-weight: 800;
+    line-height: 1.1;
+    color: #262626;
+    margin-bottom: 20px;
+
+}
 a{
     text-decoration: none;
 }
@@ -41,6 +56,7 @@ li{
 /* HEADER */
 header{
     width: 100%;
+    position: absolute;
 }
 .header__content{
     display: flex;
@@ -78,7 +94,51 @@ header{
     color: #f55f8d;
 }
 
-
+/* CAROUSEL */
+.saCarousel{
+    background-image: url(../img/pic2.png);
+    padding-top: 180px;
+    overflow: hidden;
+}
+.saCarousel__content{
+    display: flex;
+    align-items: center;
+}
+.saCarousel__title{
+    width: 60%;
+}
+.saCarousel__title > p:first-of-type{
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+.p--style1{
+    margin-bottom: 20px;
+}
+.p--style1 p{
+    padding: 10px 0;
+}
+.p--style1 p i{
+    font-size: 24px;
+    font-weight: 900;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 50%;
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    color: #fff;
+    margin-right: 10px;
+}
+.saCarousel__img{
+    width: 40%;
+}
+.saCarousel__banner{
+    margin-left: 50px;
+}
+.saCarousel__img img{
+    display: block;
+}
 /* ANIMATIOn */
 @keyframes navRoll {
     49%{
