--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,15 @@ html, body{
     margin-bottom: 20px;
 
 }
+.title--1{
+    text-align: center;
+}
+.title--1 h3{
+    font-size: 24px;
+    font-weight: bold;
+    color: #262626;
+    margin: 15px 0;
+}
 a{
     text-decoration: none;
 }
@@ -138,6 +147,42 @@ header{
 }
 .saCarousel__img img{
     display: block;
+}
+
+/* SERVICES */
+.services{
+    padding-top: 115px;
+    background-image: url(../img/bg2.png);
+    background-size: cover;
+    background-position: top center;
+}
+.services .title{
+    text-align: center;
+}
+.services__content{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin-top: 40px;
+}
+.services__item{
+    padding: 30px 45px;
+    background-color: #fff;
+    border: 3px solid transparent;
+    border-radius: 8px;
+    /* box-shadow: h-shadow v-shadow blur spread color; */
+    box-shadow: 0 0 60px rgba(0,0,0,0.1);
+    transition: all .5s;
+}
+.services__item:hover{
+    transform: translateY(-20px);
+    border-image: url(../img/br.png) 1 round;
+}
+.services__img{
+    text-align: center;
+}
+.services__img img{
+    width: 215px;
 }
 /* ANIMATIOn */
 @keyframes navRoll {
