--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,94 @@ header{
 .features__bg:hover .features__hover{
     color: #fff;
 }
+
+/* PORTFOLIO */
+.portfolio{
+    text-align: center;
+}
+.portfolio__gallery{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) 1.5fr;
+    gap: 35px;
+}
+.portfolio__gallery img{
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio__item{
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.portfolio__gallery .portfolio__item:first-of-type, .portfolio__gallery .portfolio__item:nth-of-type(5){
+    grid-column: 1 / 3;
+}
+.portfolio__gallery .portfolio__item:last-of-type{
+    grid-row: 2 / 4;
+    grid-column: 3 / 4;
+}
+.portfolio__overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    transition: all .75s;
+}
+.portfolio__text{
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    transform: translatey(100px);
+    transition: all .75s;
+}
+.portfolio__icon{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 28px;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    border-radius: 10px;
+    transform: translate(19px, -19px);
+    opacity: 0;
+    transition: all .75s;
+}
+.portfolio__icon i{
+    color: #fff;
+}
+.portfolio__item::before{
+    content: "";
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    display: block;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+    transform: skewX(-25deg);
+    transition: all .75s;
+}
+.portfolio__item:hover .portfolio__overlay{
+    opacity: 1;
+}
+.portfolio__item:hover .portfolio__icon{
+    opacity: 1;
+    transform: translate(0,0);
+}
+.portfolio__item:hover .portfolio__text{
+    transform: translateY(0);
+}
+.portfolio__item:hover::before{
+    left: 125%;
+}
 /* ANIMATION */
 @keyframes navRoll {
     49%{
