done blog section

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ header{
     background-image: url(../img/bg2.png);
     background-size: cover;
     background-position: top center;
+    /* overflow: hidden; */
 }
 .services .title{
     text-align: center;
@@ -413,6 +414,82 @@ header{
 }
 .portfolio__item:hover::before{
     left: 125%;
+}
+
+/* BLOG */
+.blog{
+    padding: 115px 0 85px;
+    text-align: center;
+    background-image: url(../img/bg16.png);
+    background-size: cover;
+    background-position: top center;
+}
+.blog__item{
+    text-align: left;
+    background-color: rgba(245, 95, 141, 0.1);
+    border-radius: 8px;
+}
+.blog__header{
+    position: relative;
+}
+.blog__header img{
+    width: 100%;
+    border-radius: 8px;
+}
+.blog__header p{
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    border-radius: 6px;
+    padding: 10px 20px;
+    font-size: 14px;
+    color: #fff;
+    position: absolute;
+    bottom: -20px;
+    left: 15px;
+}
+.blog__text{
+    padding: 30px 15px 20px;
+    line-height: 1.4;
+    margin-bottom: 20px;
+    text-align: left;
+}
+.blog__text h3{
+    margin: 0;
+}
+.blog__footer{
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: normal;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+}
+.blog__footer p{
+    margin-right: 20px;
+}
+.blog__footer i{
+    font-size: 22px;
+    color: #f55f8d;
+    vertical-align: middle;
+}
+.blog__content .owl-theme .owl-nav {
+    margin-top: 10px;
+}
+.blog__content .owl-theme .owl-nav span{
+    margin: 5px;
+}
+.blog__content .owl-dots .owl-dot span{
+    width: 10px;
+    height: 10px;
+    margin: 5px 7px;
+    background: #D6D6D6;
+    display: block;
+    transition: opacity .2s ease;
+    border-radius: 30px;
+}
+.blog__content .owl-dots .owl-dot.active span, .blog__content .owl-dots .owl-dot:hover span{
+    background-color: #869791;
 }
 /* ANIMATION */
 @keyframes navRoll {
