--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,181 @@ header{
 .blog__content .owl-dots .owl-dot.active span, .blog__content .owl-dots .owl-dot:hover span{
     background-color: #869791;
 }
+
+/* FOOTER */
+footer{
+    background-image: url(../img/bg4.png);
+    display: block;
+    height: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #0e1b1f;
+    background-size: contain;
+    color: #fff;
+    font-size: 15px;
+    position: relative;
+}
+footer::before{
+    content: '';
+    background-image: url(../img/pattern2.png);
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.footer__form{
+    padding: 50px 60px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0px 30px 0 rgba(0, 0, 0, 0.1);
+    background-image: url(../img/pattern3.png);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: relative;
+    display: flex;
+}
+.footer__form .footer__text, .footer__form .footer__email{
+    width: 50%;
+}
+.footer__text h2{
+    font-size: 28px;
+    color: #262626;
+}
+.footer__email form{
+    display: flex;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 60px 0 rgb(0, 0, 0, 0.1);
+}
+.footer__form form input{
+    padding: 20px;
+    background-color: #fff;
+    font-size: 15px;
+    font-weight: normal;
+    color: #888;
+    flex: 1 1 auto;
+    border: 1px solid #fff;
+    border-radius: 8px 0 0 8px;
+    outline: none;
+    transition: border-color .5s;
+}
+.footer__form form input:hover, .footer__form form input:focus{
+    border-color: #f55f8d;
+}
+
+.footer__form form button{
+    cursor: pointer;
+    padding: 20px 35px;
+    font-size: 20px;
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    border-color: transparent;
+    border-radius: 0 8px 8px 0;
+    color: white;
+    transition: all 0.5s;
+}
+.footer__form form button:hover{
+    background-position: right center;
+}
+.footer__form form button:hover i{
+    animation: btnRoll .3s linear 1;
+}
+.footer__content{
+    display: flex;
+    padding: 70px 0;
+    position: relative;
+}
+.footer__item{
+    width: 25%;
+}
+.footer__item li{
+    padding: 8px 0;
+}
+.footer__item i{
+    margin-right: 10px;
+    font-weight: bold;
+}
+.footer__contact ul li{
+    display: flex;
+    align-items: center;
+}
+.footer__contact li i{
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    border-radius: 50%;
+    display: block;
+}
+.footer__item h3{
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    position: relative;
+}
+.footer__item h3::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 15px;
+    height: 4px;
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    border-radius: 16px;
+}
+.footer__item h3::after{
+    content: '';
+    width: 45px;
+    height: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    border-radius: 16px;
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+}
+.footer__item a{
+    color: #636363;
+    font-size: 16px;
+    transition: all .5s;
+}
+.footer__item a:hover{
+    color: #fff;
+}
+.footer__copyright{
+    padding: 10px 0;
+    background-color: #1f343b;
+    position: relative;
+}
+.footer__bottom{
+    display: flex;
+    justify-content: space-between;
+}
+.footer__bottom span{
+    color: #f55f8d;
+}
+.footer__copyright a {
+    height: 32px;
+    width: 32px;
+    line-height: 32px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 50px;
+    font-size: 14px;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: all 0.5s;
+}
+.footer__copyright a:hover{
+    background-color: #f55f8d;
+}
 /* ANIMATION */
 @keyframes navRoll {
     49%{
@@ -513,5 +688,17 @@ header{
     }
     100%{
         transform: rotate(1deg) translate(2px, 2px);
+    }
+}
+@keyframes btnRoll {
+    49%{
+        transform: translateX(100%);
+    }
+    50%{
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    51%{
+        opacity: 1;
     }
 }
